# vcu-minimal

./: Cargo.toml  README.md
src/: client.rs  lib.rs  main.rs  utils.rs  ws.rs
src/api/: api_endpoints.rs  api_types.rs  data.rs  endpoints.rs  mod.rs  types.rs  ws_types.rs
src/client/: mod.rs
src/ws/: mod.rs  types.rs
