[package]
name = "vcu-minimal"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "0.21.0"
futures-util = "0.3.28"
lazy_static = "1.4.0"
native-tls = "0.2.11"
regex = "1.7.3"
reqwest = { version = "0.11.16", features = ["json"] }
serde = { version = "1.0.159", features = ["derive"] }
serde_json = "1.0.95"
serde_repr = "0.1.12"
serde_tuple = "0.5.0"
sysinfo = "0.28.4"
tokio = { version = "1.27.0", features = ["macros", "rt-multi-thread", "io-std"] }
tokio-tungstenite = { version = "0.18.0", features = ["native-tls"] }
url = "2.3.1"
